Update Chinese Content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 05 2022 01:44:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Tue Jul 19 2022 20:42:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629bed9a85c6f0b7401b788a" data-wf-site="629bed9a85c6f0ac571b7889">
 <head>
   <meta charset="utf-8">
@@ -74,20 +74,20 @@
           <div id="w-node-_31a56042-9cf9-aaf9-3968-ce0ef494c7b1-401b788a" data-w-id="31a56042-9cf9-aaf9-3968-ce0ef494c7b1" style="opacity:0" class="focus-large">
             <div class="focus-block-large">
               <h2 class="heading white">Raise Awareness</h2>
-              <p class="paragraph white">Protecting the environment is important, but where and how do we, as teenagers in secondary schools, contribute to it and why do our efforts matter? CCCC educates the next-gen leaders in China through a wide range of events and scholarships. </p>
-            </div><img src="images/Screen_1.png" loading="eager" style="opacity:0" data-w-id="2cf93ff0-04b5-5cd5-e7ad-9dbddcbac366" srcset="images/Screen_1-p-500.png 500w, images/Screen_1-p-800.png 800w, images/Screen_1.png 1270w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 86vw, 79vw" alt="" class="image-focus-large">
+              <p class="paragraph white">Protecting the environment is important, but where and how do we, as teenagers in secondary schools, contribute to it and why do our efforts matter. CCCC educates the next-gen leaders in China through a wide range of events and scholarships. </p>
+            </div><img src="images/Screen_1.png" loading="eager" style="opacity:0" data-w-id="2cf93ff0-04b5-5cd5-e7ad-9dbddcbac366" sizes="(max-width: 479px) 83vw, (max-width: 767px) 86vw, 79vw" srcset="images/Screen_1-p-500.png 500w, images/Screen_1-p-800.png 800w, images/Screen_1.png 1270w" alt="" class="image-focus-large">
           </div>
           <div id="w-node-bd2ce98e-638a-a3d9-76cb-a8055cc9a018-401b788a" data-w-id="bd2ce98e-638a-a3d9-76cb-a8055cc9a018" style="opacity:0" class="focus color">
             <div class="focus-block">
               <h3 class="heading-focus">Conduct Research</h3>
               <p class="paragraph-focus">We believe that &quot;if you can&#x27;t measure it, you can&#x27;t manage it&quot; also applies in carbon emission control and have set the plan to measure the status and impacts of carbon footprints in major secondary schools.</p>
-            </div><img src="images/Screen_2.png" loading="eager" style="opacity:0" data-w-id="30e30dfd-c2ed-4a5e-acf4-60905f5e8621" srcset="images/Screen_2-p-500.png 500w, images/Screen_2.png 785w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 991px) 85vw, 86vw" alt="" class="image-focus">
+            </div><img src="images/Screen_2.png" loading="eager" style="opacity:0" data-w-id="30e30dfd-c2ed-4a5e-acf4-60905f5e8621" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 991px) 85vw, 86vw" srcset="images/Screen_2-p-500.png 500w, images/Screen_2.png 785w" alt="" class="image-focus">
           </div>
           <div id="w-node-_65fb8b31-2e24-4417-e163-b0da55f57b83-401b788a" data-w-id="65fb8b31-2e24-4417-e163-b0da55f57b83" style="opacity:0" class="focus">
             <div class="focus-block">
               <h3 class="heading-focus">Provide Guidance</h3>
               <p class="paragraph-focus">Achieving a carbon-neutral campus is not an easy task - it involves different aspects and could be a decade-long task. We are providing the strategies and tools necessary to get started on this mission.</p>
-            </div><img src="images/Screen_3.png" loading="eager" style="opacity:0" data-w-id="65fb8b31-2e24-4417-e163-b0da55f57b89" srcset="images/Screen_3-p-500.png 500w, images/Screen_3.png 785w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 991px) 85vw, 86vw" alt="" class="image-focus">
+            </div><img src="images/Screen_3.png" loading="eager" style="opacity:0" data-w-id="65fb8b31-2e24-4417-e163-b0da55f57b89" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 991px) 85vw, 86vw" srcset="images/Screen_3-p-500.png 500w, images/Screen_3.png 785w" alt="" class="image-focus">
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
               </div>
             </div>
             <div id="w-node-_7a5dfd07-053f-7ecf-8edc-da21fd06af88-401b788a" data-w-id="7a5dfd07-053f-7ecf-8edc-da21fd06af88" style="opacity:0" class="testimonial">
-              <div class="client"><img src="images/hansheng.png" loading="lazy" sizes="(max-width: 479px) 100vw, 53.99305725097656px" srcset="images/hansheng-p-500.png 500w, images/hansheng.png 632w" alt="" class="client-avatar">
+              <div class="client"><img src="images/hansheng.png" loading="lazy" srcset="images/hansheng-p-500.png 500w, images/hansheng.png 632w" sizes="53.99305725097656px" alt="" class="client-avatar">
                 <div class="client-info">
                   <div class="name">潍坊瀚声国际学校</div>
                   <div class="info">Nanjing Foreign Language School</div>
@@ -229,19 +229,19 @@
             <p data-w-id="d0e6000d-b15e-9855-f596-c7b54c94af71" style="opacity:0" class="paragraph">You can become a member (and make your school a participating school) either by helping us to connect with the Principal&#x27;s Office at your school or setting up a local chapter as a student club directly. Below is how we will help you to achieve a carbon neutral campus!</p>
             <div data-w-id="846eb76f-fcd5-d497-84eb-5c59f9afc932" style="opacity:0" class="block-check">
               <div class="check"><img src="images/Check.svg" loading="eager" alt="" class="icon-check"></div>
-              <div class="text-check">Rapid Fire：每季 10 期，每期请 1-2 位成员嘉宾作主题分享，5-10 位成员参与提问和交流。目前第一季已完结，第二季正在筹备中。（线上）<br></div>
+              <div class="text-check">workshops to dive into carbon neutrality<br></div>
             </div>
             <div data-w-id="1f022f3e-74d2-452d-3090-9ae866d337ae" style="opacity:0" class="block-check">
               <div class="check"><img src="images/Check.svg" loading="eager" alt="" class="icon-check"></div>
-              <div class="text-check">Coffee Chat：不定期举行，每次活动 10-20 位成员参加，每位轮流自我介绍后自由交流。（线上）</div>
+              <div class="text-check">connections to influencers and academics in the space</div>
             </div>
             <div data-w-id="e6a7aaba-9ac7-ec5f-833d-b3c1e55dc564" style="opacity:0" class="block-check">
               <div class="check"><img src="images/Check.svg" loading="eager" alt="" class="icon-check"></div>
-              <div class="text-check">城市聚会：目前北京、上海、伦敦都已举行过线下聚会。</div>
+              <div class="text-check">better access to our advisors and chance to join the research program</div>
             </div>
             <div data-w-id="e7a31272-904e-e0ec-5332-451e3bd22b7c" style="opacity:0" class="block-check">
               <div class="check"><img src="images/Check.svg" loading="eager" alt="" class="icon-check"></div>
-              <div class="text-check">更多活动期待你的发起!</div>
+              <div class="text-check">better access to our scholarship</div>
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
     </div>
     <div id="jiaru" class="section wf-section">
       <div class="content">
-        <div data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f957" class="grid-banner"><img src="images/Screen_4.png" loading="eager" data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f958" id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f958-13e3f957" srcset="images/Screen_4-p-500.png 500w, images/Screen_4.png 826w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 84vw, (max-width: 991px) 47vw, 48vw" alt="" class="image-banner">
+        <div data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f957" class="grid-banner"><img src="images/Screen_4.png" loading="eager" data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f958" id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f958-13e3f957" sizes="(max-width: 479px) 100vw, (max-width: 767px) 84vw, (max-width: 991px) 47vw, 48vw" srcset="images/Screen_4-p-500.png 500w, images/Screen_4.png 826w" alt="" class="image-banner">
           <div id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f959-13e3f957" class="banner-block">
             <h2 class="heading white">Take Action Now!</h2>
             <p class="paragraph white">If you are interested in supporting CCCC or become a member at CCCC, feel free to reach out to us at:<br>‍<br>Email: boxi@CCCC.foundation<br>WeChat: PtSn_0505 (founder, Boxi Li)</p>
@@ -284,13 +284,12 @@
           <div id="w-node-_53f4be89-b5be-28b5-be3b-033dcaec778d-d5c9855e" data-w-id="53f4be89-b5be-28b5-be3b-033dcaec778d" class="block-footer"></div>
           <div id="w-node-_15c6fc53-cc86-a518-586c-6279d5c9857d-d5c9855e" data-w-id="15c6fc53-cc86-a518-586c-6279d5c9857d" class="block-footer">
             <h6 class="heading-footer">More About Us</h6>
-            <a href="https://wonderful-rhinoceros-342.notion.site/ImmerseDAO-Wiki-43c3633292764f8f9dcdbeffd137da32" target="_blank" class="link-footer">News</a>
             <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Whitepaper</a>
+            <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Follow Us on WeChat</a>
           </div>
         </div>
         <div data-w-id="15c6fc53-cc86-a518-586c-6279d5c98587" class="footer-down">
-          <p class="text-footer-down">Immerse DAO - 2022<a href="https://webflow.com/" target="_blank" class="link-footer-down"></a>
-          </p>
+          <p class="text-footer-down"></p>
         </div>
       </div>
     </div>
