--- a/detail_post.html
+++ b/detail_post.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 05 2022 01:44:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Tue Jul 19 2022 20:42:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629bed9a85c6f0d14c1b7892" data-wf-site="629bed9a85c6f0ac571b7889">
 <head>
   <meta charset="utf-8">
@@ -56,7 +56,7 @@
     </div>
     <div class="section wf-section">
       <div class="content">
-        <div data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f957" class="grid-banner"><img src="images/Screen_4.png" loading="eager" data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f958" id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f958-13e3f957" srcset="images/Screen_4-p-500.png 500w, images/Screen_4.png 826w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 84vw, (max-width: 991px) 47vw, 48vw" alt="" class="image-banner">
+        <div data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f957" class="grid-banner"><img src="images/Screen_4.png" loading="eager" data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f958" id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f958-13e3f957" sizes="(max-width: 479px) 100vw, (max-width: 767px) 84vw, (max-width: 991px) 47vw, 48vw" srcset="images/Screen_4-p-500.png 500w, images/Screen_4.png 826w" alt="" class="image-banner">
           <div id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f959-13e3f957" class="banner-block">
             <h2 class="heading white">Take Action Now!</h2>
             <p class="paragraph white">If you are interested in supporting CCCC or become a member at CCCC, feel free to reach out to us at:<br>‍<br>Email: boxi@CCCC.foundation<br>WeChat: PtSn_0505 (founder, Boxi Li)</p>
@@ -74,13 +74,12 @@
           <div id="w-node-_53f4be89-b5be-28b5-be3b-033dcaec778d-d5c9855e" data-w-id="53f4be89-b5be-28b5-be3b-033dcaec778d" class="block-footer"></div>
           <div id="w-node-_15c6fc53-cc86-a518-586c-6279d5c9857d-d5c9855e" data-w-id="15c6fc53-cc86-a518-586c-6279d5c9857d" class="block-footer">
             <h6 class="heading-footer">More About Us</h6>
-            <a href="https://wonderful-rhinoceros-342.notion.site/ImmerseDAO-Wiki-43c3633292764f8f9dcdbeffd137da32" target="_blank" class="link-footer">News</a>
             <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Whitepaper</a>
+            <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Follow Us on WeChat</a>
           </div>
         </div>
         <div data-w-id="15c6fc53-cc86-a518-586c-6279d5c98587" class="footer-down">
-          <p class="text-footer-down">Immerse DAO - 2022<a href="https://webflow.com/" target="_blank" class="link-footer-down"></a>
-          </p>
+          <p class="text-footer-down"></p>
         </div>
       </div>
     </div>
