Update Page Preview

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jul 19 2022 20:42:15 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 19 2022 20:50:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629bed9a85c6f0b7401b788a" data-wf-site="629bed9a85c6f0ac571b7889">
 <head>
   <meta charset="utf-8">
-  <title>Immerse DAO</title>
-  <meta content="Immerse DAO 致力于在新的技术浪潮下，创建一个由一群在不同领域取得卓越成就的独特个体构成的数字乌托邦。" name="description">
-  <meta content="Immerse DAO" property="og:title">
-  <meta content="Immerse DAO 致力于在新的技术浪潮下，创建一个由一群在不同领域取得卓越成就的独特个体构成的数字乌托邦。" property="og:description">
-  <meta content="Immerse DAO" property="twitter:title">
-  <meta content="Immerse DAO 致力于在新的技术浪潮下，创建一个由一群在不同领域取得卓越成就的独特个体构成的数字乌托邦。" property="twitter:description">
+  <title>CCCC</title>
+  <meta content="Campus Carbon Commitment Collective (CCCC) is a student non-profit organization headquartered in Beijing to help achieve campus carbon neutrality across China." name="description">
+  <meta content="CCCC" property="og:title">
+  <meta content="Campus Carbon Commitment Collective (CCCC) is a student non-profit organization headquartered in Beijing to help achieve campus carbon neutrality across China." property="og:description">
+  <meta content="CCCC" property="twitter:title">
+  <meta content="Campus Carbon Commitment Collective (CCCC) is a student non-profit organization headquartered in Beijing to help achieve campus carbon neutrality across China." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
