--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jul 19 2022 20:50:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 20 2022 05:34:43 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629bed9a85c6f0b7401b788a" data-wf-site="629bed9a85c6f0ac571b7889">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
           <a href="#zhili" class="nav-link w-nav-link">Membership</a>
           <a href="#huodong" class="nav-link w-nav-link">Support</a>
         </nav>
-        <a href="#jiaru" class="nav-button w-button">Join Us<br></a>
+        <a href="https://cccc-3.gitbook.io/whitepaper/" target="_blank" class="nav-button w-button">Whitepaper<br></a>
         <div class="menu-button w-nav-button">
           <div class="menu-icon w-icon-nav-menu"></div>
         </div>
@@ -48,7 +48,7 @@
             <h1 data-w-id="5916dd8f-e5d6-7bb2-b64d-e2a4481880d6" style="opacity:0" class="heading-hero">Campus Carbon Commitment Collective</h1>
             <p data-w-id="80995846-b946-6d3b-e54d-5790298f621d" style="opacity:0" class="paragraph-hero">Campus Carbon Commitment Collective (CCCC) is a student non-profit organization headquartered in Beijing. We are on the road to help achieve net zero greenhouse gas emissions across secondary schools in China.</p>
             <div data-w-id="1e91b126-44b1-99a9-ff9e-60629e8792b5" style="opacity:0" class="w-layout-grid grid-button">
-              <a href="#" id="w-node-_8239d24d-4615-b7aa-3371-854c97de0141-401b788a" class="button w-button">Read Our White Paper</a>
+              <a href="https://cccc-3.gitbook.io/whitepaper/" id="w-node-_8239d24d-4615-b7aa-3371-854c97de0141-401b788a" target="_blank" class="button w-button">Read Our White Paper</a>
               <a id="w-node-cc79d164-51f5-42bd-f4b4-4156659aff82-401b788a" data-w-id="cc79d164-51f5-42bd-f4b4-4156659aff82" href="#" class="link-button w-inline-block"></a>
             </div>
           </div>
@@ -284,8 +284,7 @@
           <div id="w-node-_53f4be89-b5be-28b5-be3b-033dcaec778d-d5c9855e" data-w-id="53f4be89-b5be-28b5-be3b-033dcaec778d" class="block-footer"></div>
           <div id="w-node-_15c6fc53-cc86-a518-586c-6279d5c9857d-d5c9855e" data-w-id="15c6fc53-cc86-a518-586c-6279d5c9857d" class="block-footer">
             <h6 class="heading-footer">More About Us</h6>
-            <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Whitepaper</a>
-            <a href="http://immersedao.io/files/deck.pdf" target="_blank" class="link-footer">Follow Us on WeChat</a>
+            <a href="https://cccc-3.gitbook.io/whitepaper/" target="_blank" class="link-footer">Whitepaper</a>
           </div>
         </div>
         <div data-w-id="15c6fc53-cc86-a518-586c-6279d5c98587" class="footer-down">
