--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f957" class="grid-banner"><img src="images/Screen_4.png" loading="eager" data-w-id="028c99df-4a74-5dd9-09f8-7ada13e3f958" id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f958-13e3f957" sizes="(max-width: 479px) 100vw, (max-width: 767px) 84vw, (max-width: 991px) 47vw, 48vw" srcset="images/Screen_4-p-500.png 500w, images/Screen_4.png 826w" alt="" class="image-banner">
           <div id="w-node-_028c99df-4a74-5dd9-09f8-7ada13e3f959-13e3f957" class="banner-block">
             <h2 class="heading white">Take Action Now!</h2>
-            <p class="paragraph white">If you are interested in supporting CCCC or become a member at CCCC, feel free to reach out to us at:<br>‍<br>Email: boxi@CCCC.foundation<br>WeChat: PtSn_0505 (founder, Boxi Li)</p>
+            <p class="paragraph white">If you are interested in supporting CCCC or become a member at CCCC, feel free to reach out to us at:<br>‍<br>Email: gengchang@CCCC.foundation (President, Gengchang Xu)</p>
           </div>
         </div>
       </div>
